feat(frontend): implement frontend-backend boundary with graceful degradation
- Enhanced API config layer with unified timeout, retry, and error codes
- Rewrote API client with retry, timeout, backend status awareness
- Created useApi composable for backend-aware API calls
- Created ErrorBoundary Vue component for graceful error handling
- Updated Layout.astro with favicon fetch timeout and graceful fallback
- Updated article/[slug].astro with safeFetch and feature disable on backend down
- Added backend health check to AdminLayout with retry button
- Added global error handling in app.ts for unhandled API errors
- Added security headers via middleware.ts and public/_headers
- Updated BackendStatusBanner with dismiss and auto-recovery
- Removed duplicate API_BASE_URL definitions across codebase
- Unified API configuration through config/api.ts