@@ -1,9 +1,11 @@
 package com.luomiblog.config;
 
+import com.luomiblog.security.InstallLockFilter;
 import com.luomiblog.security.JwtAuthenticationFilter;
-import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Lazy;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -23,16 +25,26 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(prePostEnabled = true)
-@RequiredArgsConstructor
 @SuppressWarnings("deprecation")
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final InstallLockFilter installLockFilter;
     private final UserDetailsService userDetailsService;
+
+    public SecurityConfig(
+            JwtAuthenticationFilter jwtAuthenticationFilter,
+            @Lazy InstallLockFilter installLockFilter,
+            UserDetailsService userDetailsService) {
+        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
+        this.installLockFilter = installLockFilter;
+        this.userDetailsService = userDetailsService;
+    }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -45,13 +57,28 @@ public class SecurityConfig {
                         .requestMatchers("/api/install/**").permitAll()
                         .requestMatchers("/api/health/**").permitAll()
                         .requestMatchers("/api/site/**").permitAll()
-                        .requestMatchers("/api/articles", "/api/articles/{slug}", "/api/articles/id/{id}").permitAll()
-                        .requestMatchers("/api/articles/category/{categoryId}").permitAll()
-                        .requestMatchers("/api/articles/search").permitAll()
-                        .requestMatchers("/api/articles/{id}/view", "/api/articles/{id}/like").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/articles", "/api/articles/{slug}", "/api/articles/id/{id}").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/articles/category/{categoryId}").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/articles/search").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/articles/{id}/view").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/categories", "/api/categories/{id}", "/api/categories/slug/{slug}", "/api/categories/tree").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/tags", "/api/tags/{id}", "/api/tags/slug/{slug}", "/api/tags/popular", "/api/tags/search").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/comments/article/{articleId}").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/likes/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/likes/**").permitAll()
+                        .requestMatchers("/api/admin/dashboard/**").hasAnyRole("ADMIN", "BLOGGER")
+                        .requestMatchers("/api/admin/articles/**").hasAnyRole("ADMIN", "BLOGGER")
+                        .requestMatchers("/api/admin/users/**").hasRole("ADMIN")
+                        .requestMatchers("/api/admin/system/**").hasRole("ADMIN")
+                        .requestMatchers("/api/admin/coins/**").hasRole("ADMIN")
+                        .requestMatchers("/api/admin/ai/**").hasRole("ADMIN")
+                        .requestMatchers("/api/admin/settings/**").hasRole("ADMIN")
+                        .requestMatchers("/api/admin/analytics/**").hasAnyRole("ADMIN", "BLOGGER")
+                        .requestMatchers("/api/admin/**").hasAnyRole("ADMIN", "BLOGGER")
                         .anyRequest().authenticated()
                 )
                 .authenticationProvider(authenticationProvider())
+                .addFilterBefore(installLockFilter, UsernamePasswordAuthenticationFilter.class)
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -60,10 +87,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4321", "http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(false);
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -84,6 +112,6 @@ public class SecurityConfig {
 
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        return new BCryptPasswordEncoder(12);
     }
 }
